Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8682

CSV engine does not properly process "", in quotes

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.1.6
    • 10.1.8
    • OTHER
    • 10.1.8-3

    Description

      The 2013 MySQL bug http://bugs.mysql.com/bug.php?id=71091 also affects MariaDB (verified on 10.1, almost certainly all other versions too).

      It has been fixed on Percona server - https://www.percona.com/doc/percona-server/5.6/flexibility/csv_engine_mode.html - with the introduction of a new system variable, csv_mode

      A user requested whether this could apply to MariaDB as well. I suggested they try CONNECT (I haven't tested whether the same issue appears there also), but it would make sense to use the same solution on MariaDB.

      Attachments

        Activity

          People

            svoj Sergey Vojtovich
            greenman Ian Gilfillan
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.